--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 <!-- Main Header navigation -->
-<div class="main-nav-container">
+<div id="maincontainer">
   <div class="logo-container">
     <img src="img/logo/other logos/logo1.png" alt="logo">
   </div>
@@ -98,17 +98,12 @@
               </a>
               <ul class="submenu-2">
                 <li>
-                  <a href="#">MBA</a>
-                </li>
-                <li>
-                  <a href="#">BIT</a>
-                </li>
-               
+                  <a href="#">MUST Program in Palpa College of Management and IT, Kathmandu, Nepal</a>
+                </li>  
               </ul>
           </li>
         </ul>
       </li>
-
       <li>
         <a href="gallery.html">Gallery</a>  
       </li>
