--- a/gallery.html
+++ b/gallery.html
@@ -45,7 +45,7 @@
 
 
 <!-- Main Header navigation -->
-<div class="main-nav-container">
+<div id="maincontainer">
   <div class="logo-container">
     <img src="img/logo/other logos/logo1.png" alt="logo">
   </div>
