--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- Main Header navigation -->
 <div id="maincontainer">
   <div class="logo-container">
-    <img src="img/logo/other logos/logo1.png" alt="logo">
+    <a href="index.html"><img src="img/logo/other logos/logo1.png" alt="logo"></a>
   </div>
 
   <nav id="main-nav">
@@ -63,7 +63,7 @@
         </a>
           <ul class="submenu">
             <li>
-              <a href="iukl_Programs.html">IUKL Programs
+              <a href="#">IUKL Programs
                 
                 <i class="fas fa-angle-right arrow"></i>
               </a>
@@ -89,10 +89,10 @@
               </ul>
           </li>
             <li>
-              <a href="cima-program.html">CIMA UK Program </a>
+              <a href="#">CIMA UK Program </a>
             </li>
             <li>
-              <a href="must_programs.html">MUST Programs
+              <a href="#">MUST Programs
                 
                 <i class="fas fa-angle-right arrow"></i>
               </a>
@@ -118,11 +118,11 @@
       <!-- Mobile-view-Navigation -->
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="#">OUR PROJECT</a>
-      <a href="#">GALLERY</a>
-      <a href="#">MESSAGE FROM FOUNDER</a>
-      <a href="#">CONNECT WITH US</a>
+      <a href="gallery.html">GALLERY</a>
+      <a href="#message">MESSAGE FROM FOUNDER</a>
+      <a href="contact.html">Contact</a>
     </div>
 
     <div id="main-button">
