padding and margin edited

--- a/index.html
+++ b/index.html
@@ -218,11 +218,10 @@
     <div class="inner">
       <div class="banner-content">
         <div class="section-title">
-          <p>We create the B2B business opportunities in education, human resource management,</p> <p>technology transformation, agriculture, and Health Care</p>
-          
+          <p>We create the B2B business opportunities in education ,human resource management, technology transformation, agriculture, and Health Care</p>
         </div>
         <div class="section-content">
-          <a href="#" class="btn-event"> Kindly contact our Founder</a> <br> <br>
+          <a href="#" class="btn-event"> Kindly contact our Founder</a> <br> 
           <button class="common-button">Connect With Us</button>
         </div>
       </div>
