--- a/gallery.html
+++ b/gallery.html
@@ -108,7 +108,7 @@
         <a href="gallery.html">Gallery</a>  
       </li>
       <li class="">
-        <a href="index.html">Message From Founder</a>
+        <a href="#message">Message From Founder</a>
       </li>
       <div class="contact-button" onclick="window.location.href = 'contact.html'">  Contact Us </div>
     </ul>
@@ -121,7 +121,7 @@
       <a href="index.html">HOME</a>
       <a href="#">OUR PROJECT</a>
       <a href="gallery.html">GALLERY</a>
-      <a href="index.html>MESSAGE FROM FOUNDER</a>
+      <a href="#message">MESSAGE FROM FOUNDER</a>
       <a href="contact.html">Contact</a>
     </div>
 
@@ -222,6 +222,6 @@
     <div class="copyright">© 2021 Finest Technology, All Rights Reserved | <a href="#">Site By: IET Technology</a> </div>
   </section>
 
-        
+<script src="js/main.js"></script> 
 </body>
 </html>
